themes/vantage/tags/1.0.9/README.md
Vantage Theme
---------------
Vantage is a multipurpose WordPress theme, based on _s with integration into SiteOrigin's extras framework.


License
---------------
This theme, like WordPress, is licensed under the GPL 2.0. Use it to make something cool, have fun, and share what you've learned with others. The premium version of this theme is also licensed under the same GPL 2.0 license.

All Javascript is located in /js/ with license headers where appropriate.

All demo photographs have been sourced from Pixabay and are licensed under the public domain.

This theme is originally based on Underscores (_s) starter theme http://underscores.me/


SiteOrigin Extras
---------------
This theme is built around the SiteOrigin extras framework contained in the folder extras/. All code is licensed under GPL 2.0 and copyright Greg Priday unless otherwise stated in the file header.


Bundled Resources
---------------
* FontAwesome by Dave Gandy licensed under SIL OFL 1.1 <http://scripts.sil.org/OFL>


Change Log
---------------

**1.0**
Initial release.

**1.0.1**
A few minor bug fixes and updates.

**1.0.2**
Fixed issue with Meta Slider integration.
Added more hooks and filters to logo.
HTML code clean up.
Framework updates.

**1.0.3**
Set background color for CSS footer.
Added circle icon post loop.
Added options to circle icon widget.
Added some more WooCommerce styles.
Various bug fixes.
Additional theme settings.

**1.0.4**
Added retina icons.
Created spritemaps.
Various fixes and improvements.
Fixes some CSS issues that resulted from broken build process.
Added minified Javascript

**1.0.5**
Fixed ordering of footer widgets.
Minor CSS fixes and changes.
Added IE compatibility header to prevent compatibility mode from breaking design.
Handles no sidebar properly.
Added a way to include an overlay image in Meta Slider free.

**1.0.6**
Added option to have Meta Slider as page header.
Fixed non responsive layout.
Removed sticky menu and scroll to top from mobile devices.
Premium: Customizer integration.

**1.0.7**
Removed call to function that isn't part of WordPress core.
Bug fixes with Meta Slider integration.

**1.0.8**
Fixed issue with home slider being shown on blog archives.
Fixed logo issues with Jetpack Photon.
Minor bug fixes.
Premium: Added more customizations
Premium: Added Page Builder element styles

**1.0.9**
Fixed responsive header for iPad.
Fixed drop down menu for iPad.
Added mobile-device class to body when visiting from a mobile device.
Responsive CSS improvements.
Fixed carousel loop with long title.
Premium: Added more customizations.